fix: bad overflow in modal for content with very long strings (#161)

--- a/src/components/UI/Modal/ModalBody/ModalBody.module.scss
+++ b/src/components/UI/Modal/ModalBody/ModalBody.module.scss
@@ -9,6 +9,8 @@
   white-space: break-spaces;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: inherit;
+  overflow-wrap: break-word;
 
   &.error {
     color: $--color-error;
